# pyclef

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyclef.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  test.py
.github/workflows/: docs.yaml  publish.yaml
_modules/: index.html
_modules/pyclef/: collection.html  event.html  exceptions.html  fields.html  filter.html  parser.html
_sources/: modules.rst.txt
docs/docs/source/: conf.py  index.rst
docs/source/: conf.py  index.rst  pyclef.rst
pyclef/: __init__.py  collection.py  event.py  exceptions.py  fields.py  filter.py  log.clef  parser.py
tests/: __init__.py  conftest.py  test_collection.py  test_event.py  test_filter.py  test_parser.py
tests/synthetic/: log.clef
