[tool.poetry]
name = "pyclef"  # Your package name
version = "1.0.0"  # Follow semantic versioning
description = "A Python library for working with CLEF log files"
authors = ["Shuvo Paul <your-email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/paul-shuvo/pyclef"
repository = "https://github.com/paul-shuvo/pyclef"
keywords = ["CLEF", "log", "parser", "filtering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
sphinx = "^5.3.0"  # Main Sphinx documentation generator
shibuya = "^2026.1.9"
sphinxcontrib-napoleon = "^0.7"  # Google-style and NumPy-style docstrings
sphinx-autobuild = "^2021.3.14"  # Auto-rebuild and serve docs during editing

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
shibuya = "^2026.1.9"
sphinxcontrib-napoleon = "^0.7" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"