[metadata]
name = pyclef
version = 1.0.0
description = A Python library for working with CLEF log files
long_description = file: README.md
long_description_content_type = text/markdown
author = Shuvo Paul
author_email = your-email@example.com
url = https://github.com/paul-shuvo/pyclef
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =

[options.extras_require]
dev =
    black>=23.0
    flake8>=6.0
    isort>=5.12.0
test =
    pytest>=7.0
    pytest-cov>=4.0
docs =
    sphinx>=5.3.0
    shibuya>=2026.1.9
    sphinx-autodoc-typehints>=1.20.0
    sphinxcontrib-napoleon>=0.7
    sphinx-autobuild>=2021.3.14

[options.package_data]
* = *.txt, *.rst, *.md